<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="315dp"
    android:layout_height="320dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_popup"
    android:layout_gravity="center"
    android:id="@+id/operarioDataLayout">

    <RelativeLayout
        android:id="@+id/data_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryTextLight"
            android:text="CAMBIO DE TURNO"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_group_white_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/data_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/data_header"
        android:layout_above="@+id/data_footer"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/nom_apellido_hint"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/HintSize">

            <EditText
                android:id="@+id/txt_dSupervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supervisor_hint"
                android:inputType="textCapWords"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="15sp"
            android:text="@string/ejemplo_hint"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_body2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/data_header"
        android:layout_above="@+id/data_footer"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_apellido_hint"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/HintSize">

            <EditText
                android:id="@+id/txt_dOperario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_operario"
                android:inputType="textCapWords"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="15sp"
            android:text="@string/ejemplo_hint"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/data_footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_toStartOf="@+id/btn_aceptar"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:visibility="invisible"
            android:text="@string/btn_atras_data_dialog"/>

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/btn_siguiente_data_dialog" />

        <Button
            android:id="@+id/btn_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:visibility="gone"
            android:text="@string/btn_aceptar_data_dialog" />

    </RelativeLayout>




</RelativeLayout>